ghc-4335c07/testsuite/tests/rename/should_fail/T12229.hs
{-# LANGUAGE RecordWildCards #-}

module T12229 where

data T = MkT { x, pi :: Float }

f x = MkT { .. }  -- 'pi' is not initialised, because
                  -- there is no local binding

g x pi = MkT { .. }  -- 'pi' is initialised

